Adding functionality for truststore tracking and governance
